--- a/templates/htmlpages/input.html
+++ b/templates/htmlpages/input.html
@@ -7,6 +7,7 @@
 </head>
 <body bgcolor="yellow">
     <h1> Feedback Form</h1>
+    <p> Fill the form </p>
     <form method="post">
         {{form.as_p}}
         {%csrf_token%}
